@@ -28,7 +28,7 @@ public class CategoryServiceImplTest {
     @Test
     public void findOne() {
         ProductCategory productCategory = categoryService.findOne(1);
-        Assert.assertEquals(new Integer(1), productCategory.getCategoryId());
+        Assert.assertEquals(Integer.valueOf(1), productCategory.getCategoryId());
     }
 
     @Test
